correction contraste

--- a/style/main.css
+++ b/style/main.css
@@ -42,7 +42,7 @@ nav a {
   font-weight: bold;
   text-decoration: none;
   background-color: white;
-  color: #5faaa5;
+  color: #1e7973;
   padding: 12px;
   border-radius: 10px;
   transition: 0.3s;
@@ -53,7 +53,7 @@ nav a {
 }
 nav a:hover {
   box-shadow: 12px 12px 10px #4b4b4b;
-  color: #305351;
+  transform: scale(1.1);
 }
 nav p {
   font-size: 20px;
@@ -64,7 +64,7 @@ nav p {
   border-radius: 10px;
   margin-left: 20px;
   box-shadow: 12px 12px 10px #4b4b4b;
-  color: #f5aa1f;
+  color: #f8591a;
   text-align: center;
 }
 
